--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
           </span>
         </span>
         <span>
-          <a href="#/posts/{{post._id}}">Comments</a>
+          <a href="#/posts/{{post._id}}">Comments ({{ post.comments.length }})</a>
         </span>
       </div>
 
