--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,9 @@
           </span>
         </span>
         <span>
-          <a href="#/posts/{{post._id}}">Comments ({{ post.comments.length }})</a>
+          <a href="#/posts/{{post._id}}">
+            {{ post.comments.length }}
+            {{ post.comments.length === 1 ? "Comment" : "Comments" }}</a>
         </span>
       </div>
 
