--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,9 @@
           <span ng-hide="post.link">
             {{post.title}}
           </span>
+          <span style="font-size: 16px" ng-show="post.author">
+            posted by <a>{{post.author}}</a> |
+          </span>
         </span>
         <span>
           <a href="#/posts/{{post._id}}">
@@ -50,7 +53,11 @@
         </span>
       </div>
 
-      <form ng-submit="addPost()" style="margin-top:30px">
+      <div ng-hide="isLoggedIn()">
+        <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you post.</h3>
+      </div>
+
+      <form ng-submit="addPost()" ng-show="isLoggedIn()" style="margin-top:30px">
         <h3>Add a new post</h3>
 
         <div class="form-group">
@@ -93,7 +100,11 @@
         </span>
       </div>
 
-      <form ng-submit="addComment()" style="margin-top:30px">
+      <div ng-hide="isLoggedIn()">
+        <h3>You need to <a href="/#/login">Log In</a> or <a href="/#/register">Register</a> before you can comment.</h3>
+      </div>
+
+      <form ng-submit="addComment()" ng-show="isLoggedIn()" style="margin-top:30px">
         <h3>Add a new comment</h3>
 
         <div class="form-group">
